_sass/components/card.scss
.card {
  background-color: rgba($on-background-color, 0.05);
  padding: 1rem 2rem;
  margin: 1rem 0;
}

.card__title {
  font-size: 1.5rem;
}

.card__title--small {
  font-size: 1.2rem;
}

.card__metadata {
  color: rgba($on-surface-color, 0.38);
}

